Fix modals width and alignment

--- a/src/sass/_bulma-overrides.scss
+++ b/src/sass/_bulma-overrides.scss
@@ -5,6 +5,6 @@
 
 @media screen and (min-width: 769px), print {
   .modal-content, .modal-card {
-    width: 750px !important;
+    width: 900px !important;
   }
 }
