--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -124,6 +124,3 @@ $size-small: $size-7;
 $size-normal: $size-6;
 $size-medium: $size-5;
 $size-large: $size-4;
-
-// Modal
-$modal-content-width: 900px;
